--- a/example/angular/src/app/home/home.page.html
+++ b/example/angular/src/app/home/home.page.html
@@ -27,29 +27,27 @@
 </ion-content>
 
 <ion-footer>
-  <ion-navbar color="light">
-    <p style="padding:5px">
-      These apps will post locations to Transistor Software's demo server.  You can view your tracking in the browser by visiting:</p>
-    <p style="text-align:center"><i [innerHTML]="url">/<strong [innerHTML]="orgname"></strong></i></p>
+  <p style="padding:10px">
+    These apps will post locations to Transistor Software's demo server.  You can view your tracking in the browser by visiting:</p>
+  <p style="text-align:center"><i [innerHTML]="url">/<strong [innerHTML]="orgname"></strong></i></p>
 
-    <ion-item>
-      <ion-label color="primary">Organization:</ion-label>
-      <ion-input [(ngModel)]="orgname" readonly="true"></ion-input>
-    </ion-item>
+  <ion-item>
+    <ion-label color="primary" position="fixed">Organization:</ion-label>
+    <ion-input [(ngModel)]="orgname" readonly="true"></ion-input>
+  </ion-item>
 
-    <ion-item>
-      <ion-label color="primary">Device ID:</ion-label>
-      <ion-input [(ngModel)]="deviceIdentifier" readonly="true"></ion-input>
-    </ion-item>
+  <ion-item>
+    <ion-label position="fixed" color="primary">Device ID:</ion-label>
+    <ion-input [(ngModel)]="deviceIdentifier" readonly="true"></ion-input>
+  </ion-item>
 
-    <ion-row>
-      <ion-col align-self-start style="padding-right:5px;">
-        <ion-button expand="full" color="danger" (click)="onClickRegister()">Register</ion-button>
-      </ion-col>
-      <ion-col align-self-end style="padding-right:5px;">
-        <a [href]="url" style="text-decoration:none">
-          <ion-button expand="full" color="primary">View Server</ion-button></a>
-      </ion-col>
-    </ion-row>
-  </ion-navbar>
+  <ion-row>
+    <ion-col align-self-start style="padding-right:5px;">
+      <ion-button expand="full" color="danger" (click)="onClickRegister()">Register</ion-button>
+    </ion-col>
+    <ion-col align-self-end style="padding-right:5px;">
+      <a [href]="url" style="text-decoration:none">
+        <ion-button expand="full" color="primary">View Server</ion-button></a>
+    </ion-col>
+  </ion-row>
 </ion-footer>
