--- a/example/angular/src/app/home/home.page.html
+++ b/example/angular/src/app/home/home.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding color="dark">
+<ion-content fullscreen padding color="dark">
 
   <ion-grid>
     <ion-row>
