--- a/example/react/src/pages/advanced/styles.css
+++ b/example/react/src/pages/advanced/styles.css
@@ -1,3 +1,15 @@
+ion-content {
+	--background: transparent;
+}
+ion-content{
+    
+}
+
+ion-content #background-content {
+	
+	background: none !important;
+	
+}
 /**
  * SettingsView
  */
@@ -6,4 +18,8 @@
 }
 .SettingsView ion-label[position=stacked] {
 	font-size:  23px;
+}
+
+.polygon-geofence-menu {
+	
 }
